--- a/gb/24/9/17/n14332215.md
+++ b/gb/24/9/17/n14332215.md
@@ -2,17 +2,16 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【时事金扫描】上海变魔都 75年来最大台风</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2024/09/id14332216-1200X800-600x400.jpg" />
-<h6>上海变魔都 最大台风末日景象；川普再遇袭 枪手曾威胁香港学生；乌军奇招打乱俄大反攻 乌军情局长曝俄之恐惧。（《时事金扫描》提供）
-</h6>
+///image2=
+<h6></h6>
 <hr>
-	<p>【大纪元2024年09月17日讯】大家好，欢迎收看“时事金扫描”。我是金然。请订阅我们的频道，支持我们，点赞、留言并且转发推荐。</p>
-<p>今天焦点：上海变魔都 最大台风末日景象；川普再遇袭 枪手曾要攻击香港学生；乌军奇招打乱俄大反攻 乌军情局长曝俄罗斯的恐惧。</p>
+	<p>【大纪元2024年09月17日讯】大家好，欢迎收看《时事金扫描》。我是金然。请订阅我们的频道，支持我们，点赞、留言并且转发推荐。</p>
+<p>今天焦点：上海变魔都 最大台风末日景象；川普（特朗普）再遇袭 枪手曾要攻击香港学生；乌军奇招打乱俄大反攻 乌军情局长曝俄罗斯的恐惧。</p>
 <h2>上海变魔都 最大台风末日景象</h2>
 <p>周一，中国最大城市上海遭遇了75年来最强台风，最大风力高达14级。导致航班取消、高速公路封闭，城市街道一片狼藉。</p>
 <p>台风“贝碧嘉”从台湾北部绕过，9月16日早上在上海浦东登陆，据当地居民透露：在台风登陆前一天晚上，上海的天空突然变成紫红色，让上海看上去真的像是“魔都”景象，而台风在上海登陆时的情景，真的有美国末日大片《后天》的即视感。</p>
 <p>台风来袭，安装在上海中心大厦125层重达1000吨的阻尼器开始晃动，为了保证摩天大楼受损，楼中阻尼器的作用至关重要，可以显&#33879;减少建筑物的摇晃。而“贝碧嘉”的来临，让上海中心大厦的阻尼器晃动超过了1米。来见识一下。</p>
-<p>台风的狂风暴雨把上海许多大树连根拔起，路边大量车辆被砸坏。我曾在美国的迈阿密住过几年，每年都会经历飓风的侵袭，真得提醒大家，台风、飓风来袭时，千万别报侥幸心理，特别是不要到街上去，危险性太大。有人拍摄到有行驶的车辆被大树砸中，更有行人被压住动弹不得。</p>
+<p>台风的狂风暴雨把上海许多大树连根拔起，路边大量车辆被砸坏。我曾在美国的迈阿密住过几年，每年都会经历飓风的侵袭，真得提醒大家，台风、飓风来袭时，千万别抱侥幸心理，特别是不要到街上去，危险性太大。有人拍摄到有行驶的车辆被大树砸中，更有行人被压住动弹不得。</p>
 <p>除了街边大树倒塌的危险外，在台风中最不可预测的危险是被卷上天空的各类物体随时可能砸下来。这次台风也是对上海这个大都市建筑质量的一次检验，从拍摄到的视频中看到：最危险的是广告牌、高楼墙壁和钢窗被吹落。</p>
 <p>即使没有遇到被台风刮落的物体砸中，即使是在狂风中，不少身处室外的上海人也会遇到无法脱身的困境。</p>
 <p>大家有没有发现，每次灾难中，总能发现一些非常奇葩、但也很好笑的场景，而这次最出名的估计就是下面这位在台风中享受门楼空中泳池、外加暴雨按摩的清奇男子，果然是：只要心中有海，哪里都是马尔代夫。</p>
@@ -35,40 +34,44 @@
 <h2>乌军情局长曝俄罗斯的恐惧</h2>
 <p>马上要来纽约的泽连斯基15号讲了一段话，让外界吃惊，泽连斯基表示：“经过 8 个月的停顿，在美国国会批准援助之前，我们动用了所有仓库中的武器储备，连本来要给预备旅的所有武器都拿走了。”泽连斯基请求北约和美国尽快允许使用西方提供的远程导弹袭击俄罗斯的机场。至于库尔斯克地区的情况，泽连斯基放话：我们正在向俄罗斯施加压力，并尽一切可能让俄罗斯人感受到战争已经在他们的家园，而这场战争就是从那里带到乌克兰的。</p>
 <p>与此同时，乌克兰军队中最神秘的人物，乌克兰军事情报局长布达诺夫表示：俄罗斯急于在2025年结束战争，因为他们自己预感到“俄罗斯所有的重大危机都将在2025年夏天大爆发”，布达诺夫指出，乌军最近在俄罗斯领土上的深度打击，正在让俄罗斯人丧失信心，所谓强大的俄罗斯已经一去不复返了。</p>
-<p>好了，这次的“时事金扫描”就聊到这儿。我们需要您的支持，请订阅我们的频道，支持我们，点赞、留言并且转发推荐。如果愿意在资金上直接支持我们就更加感谢了。下期再见。</p>
-<p>《时事金扫描》制作组</p>
+<p>好了，这次的《时事金扫描》就聊到这儿。我们需要您的支持，请订阅我们的频道，支持我们，点赞、留言并且转发推荐。如果愿意在资金上直接支持我们就更加感谢了。下期再见。</p>
+<p>欢迎订阅YouTube频道：<ahref=""></a><a href="https://d2b68ib2p4x8t6.cloudfront.net/T2i&#29983/@jinsaomiao">"></a><a href="https://d2b68ib2p4x8t6.cloudfront.net/T2i&#29983/@jinsaomiao</a><br />
+欢迎订阅干净世界频道：<ahref=""></a><a href="https://d2b68ib2p4x8t6.cloudfront.net/T2i&#29983/zh-TW/channel/1fdr1livvlu2gQAfvU2nJXR3H17m0c">"></a><a href="https://d2b68ib2p4x8t6.cloudfront.net/T2i&#29983/zh-TW/channel/1fdr1livvlu2gQAfvU2nJXR3H17m0c</a></p>
+<p>新唐人《时事金扫描》制作组</p>
 <p>责任编辑：李昊#</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/10/n14327290.md#1">【时事金扫描】巴西万人上街 马斯克和X成焦点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/10/n14327914.md#1">【时事金扫描】泽连斯基新战略 要迫使普京停战</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/12/n14329507.md#1">【时事金扫描】美英外长访乌 俄最怕之事将至？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/14/n14330531.md#1">【时事金扫描】德国军舰过台海 三方隔空叫板</a></li>
-<hr>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/28/n11285995.md#1" target="_blank">杨宁：从市委书记出丑说被膜拜的延安真相</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/11/14/n4573690.md#1" target="_blank">一位留美华裔女生绝处逢生的经历</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/23/n11403580.md#1" target="_blank">共产暴政录：盛世才与国共两党的新疆分裂争夺战</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/5/n14324783.md#1">露从今夜白！应对白露之变的养生要点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/6/n14325647.md#1">【未解之谜】清末两大预言解读 台海战后盛世出？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/7/n14325862.md#1">台故宫特展“大美不言” 一览东西方工艺美学</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/6/n14325686.md#1">少女命运的改变：从沉迷电玩到神韵演员</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/26/n14317882.md#1">【历史的瞬间】李香兰 在祖国与故国的仇怨中歌唱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/10/n14327555.md#1">【晚间新闻】当中共代理人 美智库负责人将被引渡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/10/n14327927.md#1">【远见快评】美国会连环重击 要封中共高官财产</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/10/n14327770.md#1">【新闻大破解】赖清德一言牵动国际战略？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14326856.md#1">研究：银河系与仙女座星系或已开始碰触</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14326672.md#1">中共权贵关系复杂 习邓两家结怨内幕引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14326647.md#1">中共拟准设外商独资医院 被指养套杀骗局</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/8/n14326262.md#1">精灵不会老 奥兰多布鲁再当王子得想办法“冻龄”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/8/n14326334.md#1">《蝙蝠侠2》再演“小丑”？ 贝瑞科汉摀嘴避谈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14327252.md#1">前一天与孟晚舟互动 刘德华巡演摔倒登热搜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14327274.md#1">赵本山徒弟新片投资500万 首日票房不足3万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/10/n14327835.md#1">美籍身份引争议 刘亦菲遭金鹰奖取消入围资格</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/8/n14326296.md#1">旅馆业者透露房客的6大错误 可能会多花钱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/12/n14269272.md#1">失眠抑郁可能是慢性发炎 营养师：2招预防</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/6/n14325587.md#1">研究：如何重建肌肉 恢复力量</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/9/n14326686.md#1">剪发让人焕然一新 发型师告诉你多久该剪一次发</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/2/n14322310.md#1">炖梨止咳无效？中医良方击退潜藏元凶</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/9/17/n14332215.htm">【时事金扫描】上海变魔都 75年来最大台风</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/9/17/n14332215.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
